hphp/hack/test/typecheck/expression_trees/splice_err2.php.exp
File "splice_err2.php", line 9, characters 17-21:
Invalid argument (Typing[4110])
  File "expr_tree.hhi", line 181, characters 35-44:
  Expected `ExampleInt`
  File "expr_tree.hhi", line 38, characters 32-44:
  But got `ExampleString`
  File "expr_tree.hhi", line 157, characters 44-49:
    via this generic `TInfer`
